Footer overlap fix

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 html,
 body {
-  height: 100%;
+  height: 50%;
 }
 
 .title-font {
@@ -30,6 +30,5 @@ body {
 
 .footer {
   bottom: 0;
-  position: fixed;
   width: 100%;
 }
